fix user avatar alignment in track

--- a/app/less/default/modules/track.less
+++ b/app/less/default/modules/track.less
@@ -105,7 +105,8 @@
 
 .track-user {
     .align-self(center);
-    min-width: 56px;
+    min-width: 46px;
+    text-align: left;
 }
 
 .track-album {
@@ -128,7 +129,6 @@
 
 .img-user {
     .size(36px, auto);
-    margin-right: 20px;
 }
 
 .img-album {
